<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/smooth"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.musicplayer.Downloaded">

    <TextView
        style="@style/textDescript"
        android:text="@string/downloadeddescript" />

    <Button
        android:id="@+id/redirectSearch"
        style="@style/buttonstyles"
        android:text="@string/buttontoredirect" />

    <Button
        android:id="@+id/firstsong"
        style="@style/buttonplayList"
        android:text="@string/firstdownload" />

</LinearLayout>
